Refactor user controllers and services: remove unused controllers (CommonController, FilterController, NcmController, NewsController, ResumeController) and related services (BreadcrumbService). Introduce TypeOfCriteriaMapper interface and TypeOfCriterionServiceImpl class for future implementation. Clean up codebase by deleting obsolete files and ensuring proper structure for upcoming features.